syntax = "proto3";

package moviesapp;


import "google/api/annotations.proto";

option go_package = "github.com/markpassawat/go-grpc-coinlist";



service Movie {
	rpc GetMovie (Id) returns (MovieInfo){	
		option (google.api.http) = {
		get: "/v1/example/movies/{value}"
	  };
	}
	rpc GetMovies (Empty) returns (stream MovieInfo){
		option (google.api.http) = {
		  get: "/v1/example/movies"
		};
	  }
	rpc CreateMovie (MovieInfo) returns (Id){	
		option (google.api.http) = {
		post: "/v1/example/movies"
		body: "*"
	  };
	}
	rpc UpdateMovie (MovieInfo) returns (Status){	
		option (google.api.http) = {
		patch: "/v1/example/movies"
		body: "*"
	  };
	}
	rpc DeleteMovie (Id) returns (Status){	
		option (google.api.http) = {
		delete: "/v1/example/movies/{value}"
	  };
	}
}

message Empty {
	
}

message MovieInfo {
	string id = 1;
	string isbn = 2;
	string title = 3;
	Director director = 4;
}

message Director {
	string firstname = 1;
	string lastname = 2;
}

message Id {
	string value = 1;
}

message Status {
	int32 value = 1; 
}

